--- a/src/components/link/link.scss
+++ b/src/components/link/link.scss
@@ -9,7 +9,7 @@ $dropdown-width: 15rem;
     color: $dark-shade_1;
 
     &::after {
-      transform: rotate(-135deg);
+      @include css-arrow-transform;
     }
   }
 
