--- a/src/components/radio/radio.scss
+++ b/src/components/radio/radio.scss
@@ -36,4 +36,8 @@
     opacity: 0.5;
   }
 
+  &__input:hover + .radio__box .radio__gradient,
+  &__input:focus + .radio__box .radio__gradient {
+    @include hover-focus-style;
+  }
 }
