--- a/src/components/filter/filter-data.pug
+++ b/src/components/filter/filter-data.pug
@@ -1,17 +1,17 @@
 -
     locals.filter = {
         rules: [
-            {labelText: 'Можно курить'},
-            {labelText: 'Можно с питомцами'},
-            {labelText: 'Можно приглашать гостей(до 10 человек)'},
+            {labelText: 'Можно курить', checked: true},
+            {labelText: 'Можно с питомцами', disabled: true},
+            {labelText: 'Можно приглашать гостей(до 10 человек)', checked: true, disabled: true},
         ],
         accessibility: [
             {
-                labelTitle: 'Широки коридор',
-                labelText: 'Ширина коридоров в номере не менее 91 см.',
+                labelTitle: 'Широкий коридор',
+                labelText: 'Ширина коридоров в номере не менее 91 см.'
             }, {
                 labelTitle: 'Помощник для инвалидов',
-                labelText: 'На 1 этаже вас встретит специалист  и проводит до номера.',
+                labelText: 'На 1 этаже вас встретит специалист  и проводит до номера.'
             },
         ],
         additional: [
@@ -24,5 +24,5 @@
             {labelText: 'Шампунь'},
             {labelText: 'Еще один телевизор'},
             {labelText: 'Целых два шампуня!!!'},
-        ],
+        ]
     }
