--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -41,8 +41,9 @@
     border: none;
 
     &::after {
-      @include css-arrow();
+      @include css-arrow;
       top: 45%;
+      right: 50%;
       border-color: white;
     }
 
@@ -56,7 +57,7 @@
   &__slider-points {
     position: absolute;
     bottom: 10%;
-    right: 15%;
+    right: 5%;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -67,8 +68,8 @@
 
   &__slider-point {
     box-sizing: border-box;
-    width: 8px;
-    height: 8px;
+    width: 7px;
+    height: 7px;
     margin-left: 0.5rem;
     border: 1px solid white;
     border-radius: 50%;
@@ -92,10 +93,8 @@
   }
 
   &__title {
+    @include h2-style;
     margin: 0;
-    color: $dark-shade_1;
-    font-size: 1.35rem;
-    font-weight: bold;
 
 
     & span:first-child {
