--- a/src/pages/room-page-template/room-page-template.scss
+++ b/src/pages/room-page-template/room-page-template.scss
@@ -11,7 +11,7 @@
                           "big small-2";
     grid-template-columns: 68.1% auto;
     background: saddlebrown;
-    margin-bottom: 73px;
+    margin-bottom: 70px;
 
   }
   &__image-box {
@@ -49,53 +49,13 @@
   }
 
   &__title {
+    @include h2-style;
+    text-transform: none;
     margin: 0;
-    font-size: 1.4rem;
   }
 
   &__subtitle {
     margin: 0;
-  }
-
-  &__benefits {
-    &-wrapper {
-      margin-right: 12%;
-      margin-bottom: 10px;
-    }
-
-    &-list {
-      padding: 0;
-      margin: 0;
-      list-style: none;
-    }
-    &-item {
-         position: relative;
-         padding: 25px 20px 25px 60px;
-         border-bottom: 1px solid $dark-shade_0-25;
-
-         & h4 {
-           margin-bottom: 7px;
-         }
-
-         &:last-child {
-           border: none;
-         }
-
-         &--comfort, &--convenience, &--cosiness {
-           &:before {
-             position: absolute;
-             content: "";
-             top: 22px;
-             left: 5px;
-             width: 50px;
-             height: 50px;
-           }
-         }
-
-         &--comfort::before { background: url("../../assets/img/icons/icon_emoticon.svg") no-repeat; }
-         &--convenience::before { background: url("../../assets/img/icons/icon_city.svg") no-repeat; }
-         &--cosiness::before { background: url("../../assets/img/icons/icon_fire.svg") no-repeat; }
-       }
   }
 
   &__rating {
@@ -129,33 +89,10 @@
     }
   }
 
-  &__rules {
+  &__bullet {
     width: 35%;
     margin-right: 12%;
     padding-left: 20px;
-    &-list {
-      margin: 0;
-      padding: 0;
-      margin-top: 20px;
-      list-style: none;
-    }
-
-    &-item {
-      position: relative;
-      line-height: 1.5rem;
-      margin-bottom: 15px;
-
-      &::before {
-        position: absolute;
-        content: "";
-        top: 5px;
-        left: -20px;
-        width: 10px;
-        height: 10px;
-        background-color: $dark-shade_0-25;
-        border-radius: 50%;
-      }
-    }
   }
 
   &__cancel {
