--- a/src/components/button/button.pug
+++ b/src/components/button/button.pug
@@ -1,7 +1,9 @@
 //-
     options.href - адрес ссылки для тега: <a> - оформленного как кнопка (присутствует только у <ссылок>)
     options.text - текст - содержимое кнопки
-    options.fillingStyle - тип заполнения кнопки (filled/hollow/none)
+    options.fillingStyle - тип заполнения кнопки
+        (filled/hollow/none) - если использовать none или вовсе не использовать
+        данное поле, то будет создана простая кнопка без рамок с цветным текстом
     options.widthStyle- тип ширины (full - зависит от ширины родителя/ fit - зависит от ширины внутреннего текста)
     options.type - submit/button
     options.withArrow - true/false - добавляет псевдоэлемент с иконкой стрелки
