--- a/src/components/checkbox/checkbox.pug
+++ b/src/components/checkbox/checkbox.pug
@@ -1,4 +1,11 @@
-
+// -
+    options - объект с параметрами для настройки
+    options.name - имя чекбокса
+    options.value - значение чекбокса
+    options.disabled - true/false - атрибут чекбокса
+    options.checked - true/false - атрибут чекбокса
+    options.labelTitle - текст чекбокса(заголовочный)
+    options.labelText - текст чекбокса(стандартный)
 mixin checkbox(options)
     .checkbox
         label.checkbox__label
