--- a/src/components/expandable-list/expandable-list.pug
+++ b/src/components/expandable-list/expandable-list.pug
@@ -1,3 +1,7 @@
+// -
+    options - Объект листа
+    options.title - Текст кнопки, открывающей список
+    options.items - массив объектов с данными чекбоксов
 
 mixin expandable-list(options)
     .expandable
