--- a/src/components/expandable-list/expandable-list.scss
+++ b/src/components/expandable-list/expandable-list.scss
@@ -15,7 +15,7 @@
 
     &:hover,
     &:focus {
-      @include hover-focus-style;
+      @include hover-focus-style--hard;
     }
 
     &::after {
