--- a/src/components/filter/filter.pug
+++ b/src/components/filter/filter.pug
@@ -6,6 +6,10 @@ include ../checkbox/checkbox
 include ../range-slider/range-slider
 include ../expandable-list/expandable-list
 
+// -
+    Здесь используется информация из locals.filter (см. filter-data - в текущей папке,
+     или выполни поиск переменной locals.filter)
+
 mixin filter()
     form.filter
         .filter__calendar
