--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -4,7 +4,9 @@ include ../input/input
     options.items - массив с элементами меню
     options.items[0].text - имя элемента меню
     options.items[0].href - ссылка элемента меню
-    options.social -
+    options.social - массив объектов
+    {   text: 'twitter',
+        href: '/mock-address/change-me', } (см. base-data.pug или ищи переменную locals.social
 
 
 mixin footer(options)
