--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -3,7 +3,7 @@ include ../logo/logo
 
 //-
   options.menuItems - массив элементов меню
-  options.guestMenuItems - массив элементов меню гоостя
+  options.guestMenuItems - массив элементов гостевого меню
 
 mixin header(options)
   if !options
