--- a/src/components/like-button/like-button.pug
+++ b/src/components/like-button/like-button.pug
@@ -1,4 +1,7 @@
-
+// -
+    options - объект с информацией о кнопке
+    options.value - текст/значение кнопки
+    options.disabled - true/false - аттрибут кнопки
 
 mixin like-button(options)
     button.like-button(disabled=options.disabled)= options.value
