--- a/src/components/pagination/pagination.pug
+++ b/src/components/pagination/pagination.pug
@@ -1,3 +1,8 @@
+// -
+    options - объект с параметрами пагинации
+    options.count - количество страниц
+    options.count - номер текущей страницы
+
 
 mixin pagination(options)
     .pagination
