--- a/src/components/rating/rating.pug
+++ b/src/components/rating/rating.pug
@@ -1,3 +1,6 @@
+// -
+    options.name - имя рейтинга (к примеру - номер комнаты)
+    options.checked - текущая оценка
 
 mixin rating(options)
     fieldset.rating
