--- a/src/components/social/social.pug
+++ b/src/components/social/social.pug
@@ -17,8 +17,8 @@ mixin social(options)
                             при этом изменять картинку с помощью CSS стилей
                             При инлайне SVG в CSS подобного эффекта не добиться(только css - фильтры)
                         if item.text==='facebook'
-                            include ./img/icon-fb.svg
+                            include ../../assets/img/icons/icon-fb.svg
                         else if item.text==='twitter'
-                            include ./img/icon-twitter.svg
+                            include ../../assets/img/icons/icon-twitter.svg
                         else if item.text === 'instagram'
-                            include ./img/icon-insta.svg
+                            include ../../assets/img/icons/icon-insta.svg
