--- a/src/components/testimonial/testimonial.pug
+++ b/src/components/testimonial/testimonial.pug
@@ -1,5 +1,13 @@
 include ../like-button/like-button
 
+// -
+    options.avatar - ссылка на аву
+    options.likesCount - количество лайков
+    options.firstName - имя автора отзыва
+    options.sureName - фамилия автора отзыва
+    options.timePassed - время, прошедшее с публикации отзыва
+    options.text - текст отзыва
+
 mixin testimonial(options)
     article.testimonial
         .testimonial__wrapper--left
