--- a/src/pages/888/888.pug
+++ b/src/pages/888/888.pug
@@ -5,4 +5,4 @@ block variables
         include ../room-page-template/room-page-template
 
 block main
-        +room-page(locals.roomPageDatabase['888'])
+        +room-page-template(locals.roomPageDatabase['888'])
