--- a/src/pages/UI/UI.pug
+++ b/src/pages/UI/UI.pug
@@ -217,7 +217,7 @@ block main
                     +benefits({items: locals.roomPageDatabase['888'].benefits})
                 .ui__form-elements-wrapper
                     h3 Bullet list
-                    +bullet-list({items: locals.roomPageDatabase['888'].rules})
+                    +bullet-list({items: locals.roomPageDatabase['888'].bullets})
                 +testimonial(locals.roomPageDatabase['888'].testimonials.items[0])
 
 
