--- a/src/pages/UI/UI.scss
+++ b/src/pages/UI/UI.scss
@@ -155,7 +155,7 @@
 
         &:hover,
         &:focus {
-          @include hover-focus-style
+          @include hover-focus-style--hard
         }
       }
     }
