--- a/src/pages/room-page-template/room-page-template-data.pug
+++ b/src/pages/room-page-template/room-page-template-data.pug
@@ -29,7 +29,7 @@
                 },],
 
             },
-            rules: [
+            bullets: [
                 'Нельзя с питомцами',
                 'Без вечеринок и мероприятий',
                 'Время прибытия — после 13:00, а выезд до 12:00',
@@ -48,9 +48,19 @@
                 additionalServices: 100 // Дневной сбор в рублевой валюте
             },
             benefits: [
-                ['Комфорт', 'Шумопоглощающие стены', 'comfort'],
-                ['Удобство', 'Окно в каждой из спален', 'convenience'],
-                ['Уют', 'Номер оснащён камином', 'cosiness'],
+                {
+                title: 'Комфорт',
+                text: 'Шумопоглощающие стены',
+                class: 'comfort'
+                }, {
+                title: 'Удобство',
+                text: 'Окно в каждой из спален',
+                class: 'convenience'
+                }, {
+                title: 'Уют',
+                text: 'Номер оснащён камином',
+                class: 'cosiness'
+                }
             ],
         }
     }
