--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -13,7 +13,7 @@
     &::before {
       @include arrow;
       bottom: -3px;
-      background: url('./img/icon-arrow_forward.svg') 50% 50% no-repeat
+      background: url('../../assets/img/icons/arrow_forward.svg') 50% 50% no-repeat
 
     }
   }
@@ -66,7 +66,7 @@
 
   &:hover,
   &:focus {
-    @include hover-focus-style;
+    @include hover-focus-style--hard;
   }
 
 }
