--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -65,6 +65,7 @@
 
     &__copyright {
         @include text-style;
+        text-align: center;
     }
 
     @include media-breakpoint-down(1000px) {
