--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -1,4 +1,8 @@
 
+//-
+    options.text - подпись к слайдеру
+    options.title - заголовок слайдера
+
 mixin range-slider(options)
     .range-slider
         span.range-slider__title= options.title
