--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -11,7 +11,7 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5) inset ;
 
   &__slide-1 {
-    background: url('./img/image@1x.jpg') no-repeat center;
+    background: url('../../assets/img/slider/image@1x.jpg') no-repeat center;
     background-size: cover;
     animation: slide3 30s linear infinite;
     animation-delay: 0s;
@@ -19,7 +19,7 @@
   }
 
   &__slide-2 {
-    background: url('./img/image2@1x.jpg') no-repeat center;
+    background: url('../../assets/img/slider/image2@1x.jpg') no-repeat center;
     background-size: cover;
     animation: slide3 30s linear 10s infinite;
     animation-delay: 10s;
@@ -27,7 +27,7 @@
   }
 
   &__slide-3 {
-    background: url('./img/image3@1x.jpg') no-repeat center;
+    background: url('../../assets/img/slider/image3@1x.jpg') no-repeat center;
     background-size: cover;
     animation: slide3 30s linear  infinite;
     animation-delay: 20s;
@@ -36,7 +36,7 @@
 
 
   &__slide-4 {
-    background: url('./img/image4@1x.jpg') no-repeat center;
+    background: url('../../assets/img/slider/image4@1x.jpg') no-repeat center;
     background-size: cover;
     animation: slide3 30s linear infinite;
     animation-delay: 30s;
