--- a/src/components/social/social.scss
+++ b/src/components/social/social.scss
@@ -16,7 +16,9 @@
   }
 
   &__link {
-    display: inline-block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 2rem;
     height: 2rem;
     font-size: 0;
