--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
 
-// Не смог подключить
+ //Не смог подключить
 //@font-face {
 //  font-family: 'Montserrat', sans-serif;
-//  src: url('./fonts/Montserrat-Regular.ttf') format('truetype');
+//  src: url('../assets/fonts/Montserrat/Montserrat-Regular.ttf') format('truetype');
 //  font-weight: 400;
+//  font-display: swap;
 //}
-
+//
 //@font-face {
 //  font-family: 'Montserrat', sans-serif;
-//  src: url('./fonts/Montserrat-Bold.ttf') format('truetype');
+//  src: url('../assets/fonts/Montserrat/Montserrat-Bold.ttf') format('truetype');
 //  font-weight: 700;
+//  font-display: swap;
+//
 //}
